2008-10-06  Stefan Jahn  <stefan@lkcc.org>

	* check_netlist.cpp: Finally removed any component specific
	checks.  Now everything can be checked by the registered module
	properties.

2008-10-05  Stefan Jahn  <stefan@lkcc.org>

	* check_netlist.cpp: Removed special string validation in
	properties.  Identifier ranges are now stored directly in property
	definitions, thus checking can be done using the component
	specifications.

	* module.cpp: First steps towards modularization.  Changes in all
	component files.  New components now only need to register in this
	file.

2008-10-03  Stefan Jahn  <stefan@lkcc.org>

	* input.cpp: New function registerCircuits().  Global preparations
	for modularization of circuit components...

2008-09-30  Stefan Jahn  <stefan@lkcc.org>

	* input.cpp: Fixed instantiation of HICUM L0/V1.2 model.

2008-09-13  Stefan Jahn  <stefan@lkcc.org>

	* equation.cpp: Fixed segfault bug and memory leakage.

2008-09-12  Stefan Jahn  <stefan@lkcc.org>

	* equation.cpp: Added ddx() operation.  Could be useful for EDD
	equations. Works like the ddx() operator in Verilog-A.

	* differentiate.cpp: Implemented kind of reduction function for
	divisions.  Could be template for more sophisticated reductions.

2008-08-14  Stefan Jahn  <stefan@lkcc.org>

	* evaluate.cpp: Fixed range operator in indices in independent
	vectors.

2008-07-03  Stefan Jahn  <stefan@lkcc.org>

	* check_netlist.cpp: Allowing property references inside the same
	instance of a component.

2008-05-27  Stefan Jahn  <stefan@lkcc.org>

	* evaluate.cpp: Fixed small memory leak.

	* equation.cpp: Looking for variables also in the equation set
	(not just in dataset) for functions like, e.g., xvalue() and
	yvalue().

2008-04-23  Stefan Jahn  <stefan@lkcc.org>

	* check_touchstone.cpp: Fixed compile issue for some gcc/glibc
	combination (SuSE linux).

2008-04-11  Stefan Jahn  <stefan@lkcc.org>

	* check_netlist.cpp: Fixing compile issues for MSVC.

2008-03-27  Stefan Jahn  <stefan@lkcc.org>
